--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "commit": "cz",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "author": "wlswang",
   "license": "ISC",
