--- a/app.json
+++ b/app.json
@@ -1,10 +1,14 @@
 {
   "pages": [
+    "songPackage/pages/recommendSong/recommendSong",
+
     "pages/index/index",
     "pages/login/login",
     "pages/video/video",
     "pages/personal/personal",
-    "components/NavHeader/NavHeader"
+    "components/NavHeader/NavHeader",
+
+    "songPackage/pages/songDetail/songDetail"
   ],
   "window": {
     "backgroundTextStyle": "light",
