--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
   "pages": [
+    "songPackage/pages/recommendSong/recommendSong",
+    
     "pages/personal/personal",
 
     "pages/index/index",
     "pages/login/login",
-    "pages/video/video",
-    "components/NavHeader/NavHeader",
-    "songPackage/pages/recommendSong/recommendSong",
-    "songPackage/pages/songDetail/songDetail"
+    "pages/video/video"
   ],
   "window": {
     "backgroundTextStyle": "light",
