--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
 
   "pages": [
+    "pages/video/video",
     "pages/personal/personal",
     "pages/index/index",
-    "pages/login/login",
-    "pages/video/video"
+    "pages/login/login"
   ],
   "window": {
     "backgroundTextStyle": "light",
